# pentachoron

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle  gradle.properties  pubspec.yaml  settings.gradle
android/: key.properties
app/: CMakeLists.txt  build.gradle  keystore.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lines.frag  lines.vert
app/src/main/cpp/: matrix.cpp  matrix.h  renderer.cpp  rotation.h
app/src/main/cpp/fmath-1.0.1/: README.md
app/src/main/cpp/fmath-1.0.1/color/: Rgb.h
app/src/main/cpp/fmath-1.0.1/common/: Dimension.h  Primitives.h
app/src/main/cpp/fmath-1.0.1/matrix/: Matrix.h  Transpose.h
app/src/main/cpp/fmath-1.0.1/transform/: Multiplication.h  Perspective.h  Rotation.h  Scale.h  Translation.h  View.h
app/src/main/res/animator/: axis_button_state_animator.xml  button_axis_state_animator.xml
app/src/main/res/drawable/: axis_button.xml  axis_button_ripple.xml  axis_button_selected.xml  axis_button_unselected.xml  button_axis.xml  button_axis_default.xml  ic_launcher_background.xml  ic_preferences.xml  ic_reset_transform.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_controller.xml  view_controller.xml
app/src/main/res/menu/: appbar_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  preference_strings.xml  strings.xml  styles.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/xml/: backup_descriptor.xml  preferences.xml
(+398 files in other folders)
